# Waypoint-Backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  db.py  llm.py  main.py
app/api/v1/: __init__.py  chat.py  cities.py  compare.py  cost.py  deps.py  emergency.py  health.py  livability.py  places.py  plans.py  providers.py  services.py  states.py
app/core/: constants.py  database.py  exceptions.py  logging.py
app/db/models/: __init__.py  chat_log.py  emergency_contact.py  law_fact.py  move_plan.py  scraped_chunk.py  state.py
app/db/repositories/: base.py  chat_repo.py  emergency_repo.py  law_fact_repo.py  plan_repo.py  state_repo.py
app/domain/: dataset.py
app/domain/schemas/: chat.py  cities.py  common.py  compare.py  cost.py  emergency.py  livability.py  places.py  plan.py  services.py  state.py
app/domain/services/: chat_service.py  city_finder_service.py  compare_service.py  cost_service.py  livability_service.py  places_service.py  plan_service.py  providers_service.py  retrieval_service.py
app/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  grok_provider.py  openai_provider.py  perplexity_provider.py  prompts.py
app/scripts/: ingest.py  ingest_scraped.py  init_db.py  scrape_sources.py  seed_data.py
app/vector/: client.py  embeddings.py  indexer.py
