[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stateshift-server"
version = "0.1.0"
description = "StateShift 2.0 backend — interstate relocation API: compare states, grounded AI chat, personalized move plans"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "motor>=3.4.0",
    "pymongo>=4.6.0",
    "dnspython>=2.6.0",
    "openai>=1.40.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
